- 4.0 (2021-05-25):
    - Dropped support for Zabbix 4.x. BEWARE UUIDs of triggers (not trigger prototypes) will change.
    - Restored unused triggers.

- 3.0 (2021-05-24):
    - Added support for Zabbix 5.4. BEWARE custom UUIDs are used (i.e. history will be lost when manually upgrading the template).
    - 'App' tag renamed to 'Application'.

- 2.0 (2020-11-19):
    - Added support for Zabbix 5.2.

- 1.0 (2020-05-14):
    - Initial release.