@@ -26,7 +26,7 @@
     {% endif %}
 {%- endmacro -%}
 
-{%- macro discovery_rule(rule, items, triggers, graphs) -%}
+{%- macro discovery_rule(rule, items, triggers) -%}
     <discovery_rule>
         {% if version not in ('5.0', '5.2') %}
             <uuid>{{ [seed, rule.id]|join('/')|zuuid }}</uuid>
@@ -110,32 +110,6 @@
                 </trigger_prototype>
             {% endfor %}
         </trigger_prototypes>
-        <graph_prototypes>
-            {% for graph in graphs %}
-                <graph_prototype>
-                    {% if version not in ('5.0', '5.2') %}
-                        <uuid>{{ [seed, graph.id]|join('/')|zuuid }}</uuid>
-                    {% endif %}
-                    <name>Redis Sentinel[{{ '{#' }}LOCATION}] &gt; {{ graph.name|e }}</name>
-                    <type>{{ graph.type|default('NORMAL') }}</type>
-                    <graph_items>
-                        {% for gitem in graph['items'] %}
-                            <graph_item>
-                                <sortorder>{{ loop.index0 }}</sortorder>
-                                <drawtype>{{ gitem.drawtype|default('SINGLE_LINE') }}</drawtype>
-                                <color>{{ gitem.color }}</color>
-                                <yaxisside>{{ gitem.yaxisside|default('LEFT') }}</yaxisside>
-                                <calc_fnc>{{ gitem.calc_fnc|default('AVG') }}</calc_fnc>
-                                <item>
-                                    <host>Template App {{ name }}</host>
-                                    <key>{{ gitem.key|e }}</key>
-                                </item>
-                            </graph_item>
-                        {% endfor %}
-                    </graph_items>
-                </graph_prototype>
-            {% endfor %}
-        </graph_prototypes>
     </discovery_rule>
 {%- endmacro -%}
 
@@ -351,42 +325,6 @@
                                 '<{$REDIS_SENTINEL.UPTIME.MIN:"{#LOCATION_ID}"}',
                             'priority': 'HIGH',
                         },
-                    ],
-                    [
-                        {
-                            'id': 'graph-prototype-1.1',
-                            'name': 'Masters',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","sentinel:sentinel_masters"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.2',
-                            'name': 'Scripts',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","sentinel:sentinel_running_scripts"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","sentinel:sentinel_scripts_queue_length"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.3',
-                            'name': 'Uptime',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","server:uptime_in_seconds"]',
-                                },
-                            ],
-                        },
                     ]) }}
 
                 {#-#########################################################-#}
@@ -506,40 +444,6 @@
                                 'last(/Template App ' + name + '/redis_sentinel.info["{#LOCATION_ID}","masters:{#SUBJECT_ID}:sentinels"])'
                                 '<>last(/Template App ' + name + '/redis_sentinel.info["{#LOCATION_ID}","masters:{#SUBJECT_ID}:usable_sentinels"])',
                             'priority': 'HIGH',
-                        },
-                    ],
-                    [
-                        {
-                            'id': 'graph-prototype-2.1',
-                            'name': 'Masters[{#SUBJECT}]: quorum',
-                            'items': [
-                                {
-                                    'drawtype': 'BOLD_LINE',
-                                    'color': 'C80000',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","masters:{#SUBJECT_ID}:ckquorum"]',
-                                },
-                                {
-                                    'color': '0000C8',
-                                    'yaxisside': 'RIGHT',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","masters:{#SUBJECT_ID}:sentinels"]',
-                                },
-                                {
-                                    'drawtype': 'FILLED_REGION',
-                                    'color': '00C800',
-                                    'yaxisside': 'RIGHT',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","masters:{#SUBJECT_ID}:usable_sentinels"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-2.2',
-                            'name': 'Masters[{#SUBJECT}]: slaves',
-                            'items': [
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_sentinel.info["{#LOCATION_ID}","masters:{#SUBJECT_ID}:slaves"]',
-                                },
-                            ],
                         },
                     ]) }}
             </discovery_rules>
