@@ -26,7 +26,7 @@
     {% endif %}
 {%- endmacro -%}
 
-{%- macro discovery_rule(rule, items, triggers, graphs) -%}
+{%- macro discovery_rule(rule, items, triggers) -%}
     <discovery_rule>
         {% if version not in ('5.0', '5.2') %}
             <uuid>{{ [seed, rule.id]|join('/')|zuuid }}</uuid>
@@ -110,32 +110,6 @@
                 </trigger_prototype>
             {% endfor %}
         </trigger_prototypes>
-        <graph_prototypes>
-            {% for graph in graphs %}
-                <graph_prototype>
-                    {% if version not in ('5.0', '5.2') %}
-                        <uuid>{{ [seed, graph.id]|join('/')|zuuid }}</uuid>
-                    {% endif %}
-                    <name>Redis Server[{{ '{#' }}LOCATION}] &gt; {{ graph.name|e }}</name>
-                    <type>{{ graph.type|default('NORMAL') }}</type>
-                    <graph_items>
-                        {% for gitem in graph['items'] %}
-                            <graph_item>
-                                <sortorder>{{ loop.index0 }}</sortorder>
-                                <drawtype>{{ gitem.drawtype|default('SINGLE_LINE') }}</drawtype>
-                                <color>{{ gitem.color }}</color>
-                                <yaxisside>{{ gitem.yaxisside|default('LEFT') }}</yaxisside>
-                                <calc_fnc>{{ gitem.calc_fnc|default('AVG') }}</calc_fnc>
-                                <item>
-                                    <host>Template App {{ name }}</host>
-                                    <key>{{ gitem.key|e }}</key>
-                                </item>
-                            </graph_item>
-                        {% endfor %}
-                    </graph_items>
-                </graph_prototype>
-            {% endfor %}
-        </graph_prototypes>
     </discovery_rule>
 {%- endmacro -%}
 
@@ -1018,276 +992,6 @@
                                 '>{$REDIS_SERVER.EVICTED_KEYS.MAX:"{#LOCATION_ID}"}',
                             'priority': 'HIGH',
                         },
-                    ],
-                    [
-                        {
-                            'id': 'graph-prototype-1.1',
-                            'name': 'Clients',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","clients:connected_clients"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","clients:blocked_clients"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.2',
-                            'name': 'Cluster: nodes',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cluster:cluster_known_nodes"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cluster:cluster_size"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.3',
-                            'name': 'Cluster: slots',
-                            'items': [
-                                {
-                                    'color': 'C800C8',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cluster:cluster_slots_assigned"]',
-                                },
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cluster:cluster_slots_ok"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cluster:cluster_slots_fail"]',
-                                },
-                                {
-                                    'color': '0000C8',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cluster:cluster_slots_pfail"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.4',
-                            'name': 'Commands',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:total_commands_processed"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.5',
-                            'name': 'Connections',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:total_connections_received"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:rejected_connections"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.6',
-                            'name': 'CPU: children usage',
-                            'type': 'STACKED',
-                            'items': [
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cpu:used_cpu_sys_children"]',
-                                },
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cpu:used_cpu_user_children"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.7',
-                            'name': 'CPU: parent usage',
-                            'type': 'STACKED',
-                            'items': [
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cpu:used_cpu_sys"]',
-                                },
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","cpu:used_cpu_user"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.8',
-                            'name': 'Keyspace: expired & evicted keys',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:expired_keys"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:evicted_keys"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.9',
-                            'name': 'Keyspace: hits vs. misses',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:keyspace_hits"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:keyspace_misses"]',
-                                },
-                                {
-                                    'color': '0000C8',
-                                    'yaxisside': 'RIGHT',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","hit_ratio"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.10',
-                            'name': 'Memory: fragmentation ratio',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","memory:mem_fragmentation_ratio"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.11',
-                            'name': 'Memory: LUA usage',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","memory:used_memory_lua"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.12',
-                            'name': 'Memory: total usage',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","memory:used_memory"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","memory:used_memory_rss"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.13',
-                            'name': 'Networking',
-                            'type': 'STACKED',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:total_net_input_bytes"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:total_net_output_bytes"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.14',
-                            'name': 'Persistence: changes since last RDB save',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","persistence:rdb_changes_since_last_save"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.15',
-                            'name': 'Persistence: last AOF rewrite time',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","persistence:aof_last_rewrite_time_sec"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.16',
-                            'name': 'Persistence: last RDB save time',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","persistence:rdb_last_bgsave_time_sec"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.17',
-                            'name': 'Pub/Sub',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:pubsub_channels"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:pubsub_patterns"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.18',
-                            'name': 'Replication',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","replication:connected_slaves"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.19',
-                            'name': 'Syncs',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:sync_full"]',
-                                },
-                                {
-                                    'color': '0000C8',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:sync_partial_ok"]',
-                                },
-                                {
-                                    'color': 'C80000',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","stats:sync_partial_err"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-1.20',
-                            'name': 'Uptime',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","server:uptime_in_seconds"]',
-                                },
-                            ],
-                        },
                     ]) }}
 
                 {#-#########################################################-#}
@@ -1349,28 +1053,6 @@
                         },
                     ],
                     [
-                    ],
-                    [
-                        {
-                            'id': 'graph-prototype-2.1',
-                            'name': 'Keyspace[{#SUBJECT}]: average TTL',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","keyspace:{#SUBJECT_ID}:avg_ttl"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-2.2',
-                            'name': 'Keyspace[{#SUBJECT}]: keys',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","keyspace:{#SUBJECT_ID}:keys"]',
-                                },
-                            ],
-                        },
                     ]) }}
 
                 {#-#########################################################-#}
@@ -1421,28 +1103,6 @@
                         }
                     ],
                     [
-                    ],
-                    [
-                        {
-                            'id': 'graph-prototype-3.1',
-                            'name': 'Command stats[{#SUBJECT}]: calls',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","commandstats:{#SUBJECT}:calls"]',
-                                },
-                            ],
-                        },
-                        {
-                            'id': 'graph-prototype-3.2',
-                            'name': 'Command stats[{#SUBJECT}]: usec / call',
-                            'items': [
-                                {
-                                    'color': '00C800',
-                                    'key': 'redis_server.info["{#LOCATION_ID}","commandstats:{#SUBJECT}:usec_per_call"]',
-                                },
-                            ],
-                        },
                     ]) }}
             </discovery_rules>
 
